--- a/packages/frontend/src/components/Icon/styles.module.scss
+++ b/packages/frontend/src/components/Icon/styles.module.scss
@@ -20,7 +20,7 @@
   }
 
   &.fullscreenControls {
-    background-color: var(--fullScreenMediaButtons);
+    background-color: var(--fullScreenMediaButtonsText);
   }
 
   &.appearanceSelector {
